@@ -35,22 +35,21 @@
 
 namespace WebCore {
 
-class Page;
-class SecurityOrigin;
-class StorageArea;
+    class SecurityOrigin;
+    class StorageArea;
 
-// This interface is required for Chromium since these actions need to be proxied between processes.
-class StorageNamespace : public RefCounted<StorageNamespace> {
-public:
-    static PassRefPtr<StorageNamespace> localStorageNamespace(const String& path, unsigned quota);
-    static PassRefPtr<StorageNamespace> sessionStorageNamespace(Page*);
+    // This interface is required for Chromium since these actions need to be proxied between processes.
+    class StorageNamespace : public RefCounted<StorageNamespace> {
+    public:
+        static PassRefPtr<StorageNamespace> localStorageNamespace(const String& path, unsigned quota);
+        static PassRefPtr<StorageNamespace> sessionStorageNamespace();
 
-    virtual ~StorageNamespace() { }
-    virtual PassRefPtr<StorageArea> storageArea(PassRefPtr<SecurityOrigin>) = 0;
-    virtual PassRefPtr<StorageNamespace> copy() = 0;
-    virtual void close() = 0;
-    virtual void unlock() = 0;
-};
+        virtual ~StorageNamespace() { }
+        virtual PassRefPtr<StorageArea> storageArea(PassRefPtr<SecurityOrigin>) = 0;
+        virtual PassRefPtr<StorageNamespace> copy() = 0;
+        virtual void close() = 0;
+        virtual void unlock() = 0;
+    };
 
 } // namespace WebCore
 
