@@ -48,7 +48,6 @@ class WebFrame;
 class WebNode;
 class WebNotificationPresenter;
 class WebRange;
-class WebStorageNamespace;
 class WebURL;
 class WebView;
 class WebWidget;
@@ -72,8 +71,6 @@ public:
     virtual WebWidget* createPopupMenu(bool activatable) { return 0; }
     virtual WebWidget* createPopupMenu(const WebPopupMenuInfo&) { return 0; }
 
-    // Create a session storage namespace associated with this WebView.
-    virtual WebStorageNamespace* createSessionStorageNamespace() { return 0; }
 
     // Misc ----------------------------------------------------------------
 
