@@ -28,17 +28,12 @@
 
 #if ENABLE(DOM_STORAGE)
 
-#include "Chrome.h"
-#include "ChromeClientImpl.h"
-#include "Page.h"
 #include "SecurityOrigin.h"
 #include "StorageAreaProxy.h"
 #include "WebKit.h"
 #include "WebKitClient.h"
 #include "WebStorageNamespace.h"
 #include "WebString.h"
-#include "WebViewClient.h"
-#include "WebViewImpl.h"
 
 namespace WebCore {
 
@@ -47,11 +42,9 @@ PassRefPtr<StorageNamespace> StorageNamespace::localStorageNamespace(const Strin
     return new StorageNamespaceProxy(WebKit::webKitClient()->createLocalStorageNamespace(path, quota));
 }
 
-PassRefPtr<StorageNamespace> StorageNamespace::sessionStorageNamespace(Page* page)
+PassRefPtr<StorageNamespace> StorageNamespace::sessionStorageNamespace()
 {
-    WebKit::ChromeClientImpl* chromeClientImpl = static_cast<WebKit::ChromeClientImpl*>(page->chrome()->client());
-    WebKit::WebViewClient* webViewClient = chromeClientImpl->webView()->client();
-    return new StorageNamespaceProxy(webViewClient->createSessionStorageNamespace());
+    return new StorageNamespaceProxy(WebKit::webKitClient()->createSessionStorageNamespace());
 }
 
 StorageNamespaceProxy::StorageNamespaceProxy(WebKit::WebStorageNamespace* storageNamespace)
