@@ -1,3 +1,13 @@
+2010-01-13  Jeremy Orlow  <jorlow@chromium.org>
+
+        No reviewer.  More or less a build fix.  My 53180 broke some 
+        stuff on the Chromium port so I'm reverting.
+
+        * public/WebKitClient.h:
+        * public/WebViewClient.h:
+        * src/StorageNamespaceProxy.cpp:
+        (WebCore::StorageNamespace::sessionStorageNamespace):
+
 2010-01-11  Jeremy Orlow  <jorlow@chromium.org>
 
         Reviewed by Darin Fisher.
